# dbt-shillelagh

./: pyproject.toml
dbt/adapters/shillelagh/: __init__.py  __version__.py  connections.py  credentials.py  impl.py  relation.py
dbt/include/shillelagh/: dbt_project.yml  profile_template.yml
dbt/include/shillelagh/macros/: generate_alias_name.sql
