[tool.poetry]
name = "dbt-shillelagh"
version = "0.0.0"
description = "The Shillelagh adapter plugin for dbt"
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
readme = "README.md"

packages = [{ include = "dbt" }]
include = [
  "dbt/include/**/*.sql",
  "dbt/include/**/*.yml",
  "dbt/include/**/*.md",
]


[tool.poetry.dependencies]
python = "^3.11"
dbt-sqlite = "^1.5.0"
shillelagh = "^1.2.28"


[tool.ruff.lint.isort]
section-order = [
  # https://docs.astral.sh/ruff/settings/#lint_isort_section-order
  "future", "standard-library", "third-party", "first-party", "local-folder", # defaults
  "dbt", # dbt last on its own
]

[tool.ruff.lint.isort.sections]
dbt = ["dbt*"]


[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = [
  "dbt/adapters/shillelagh/__version__.py",
  "dbt/include/shillelagh/dbt_project.yml",
]
patterns = [
  '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', # python assignment
  '''(^version:\s*['"])[^'"]*(['"])''', # yaml key: val
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
